Ensure scrolling is nice on iOS for text area

--- a/logology-v12/src/www/scss/views/_NotesViewController.scss
+++ b/logology-v12/src/www/scss/views/_NotesViewController.scss
@@ -11,6 +11,7 @@
             font-family: inherit;
             background-color: transparent;
             color: currentColor;
+            -webkit-overflow-scrolling: touch;
         }
     }
 }
